objects/LLC_BI__Period__mdt.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if entry is available for selection</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is required and is manually populated. It is used to construct sentences for complex payment structures and payment calculator. The currently accepted values are &quot;Frequencys&quot; and &quot;Units&quot;, where &quot;Units&quot; would result in &quot;semimonths,&quot; and &quot;Frequencys&quot; would result in &quot;semimonthly.&quot;</description>
        <label>Category</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Frequency__c</fullName>
        <description>Number of occurrences per year.</description>
        <inlineHelpText>Number of occurrences per year.</inlineHelpText>
        <label>Frequency</label>
        <precision>18</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Period</label>
    <pluralLabel>Periods</pluralLabel>
</CustomObject>